# awful_rustdocs

./: .dirdocs.nuon  Cargo.toml  README.md  config.yaml
src/: cli.rs  defaults.rs  error.rs  grep.rs  harvest.rs  logging.rs  main.rs  model.rs  patch.rs  pipeline.rs  prompt.rs  regexes.rs  runner.rs  sanitize.rs  util.rs
