[package]
name = "awful_rustdocs"
version = "0.2.0"
edition = "2021"

# Metadata required by crates.io
authors = ["Thomas Gentry <thomas@awfulsec.com>"]
description = "Generate Rustdoc comments automatically using Awful Jade and a Nushell-based AST extractor."
license = "CC0-1.0"
repository = "https://github.com/graves/awful_rustdocs"
homepage = "https://github.com/graves/awful_rustdocs"
documentation = "https://docs.rs/awful_rustdocs"
readme = "README.md"
keywords = ["rustdoc", "documentation", "llm", "ast", "automation"]
categories = ["development-tools"]

[dependencies]
anyhow = "1"
camino = "1"
clap = { version = "4", features = ["derive"] }
directories = "5"
itertools = "0.13"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
tokio = { version = "1", features = ["full"] }
thiserror = "1"

# Awful Jade client
awful_aj = "0.3.6"
